--- a/css/media.css
+++ b/css/media.css
@@ -113,6 +113,12 @@
   .article-content {
     width: 67%;
   }
+  .showcase-item__head {
+    font-size: 19px;
+  }
+  .info-price-content {
+    padding: 20px 30px 24px 40px;
+  }
 }
 
 @media only screen and (max-width: 991px) {
@@ -185,24 +191,37 @@
   .footer-nav ul {
     padding-top: 20px;
   }
-  
-  .sidebar {
-    float: none;
+  .catalog-item tr td {
+    display: block;
+  }
+  .catalog-item {
     margin: 0 auto;
+    text-align: center;
+  }
+  .catalog-item__head {
+    padding: 20px 0;
+  }
+  .catalog-item-price {
+    width: auto;
+    padding-top: 20px;
+  }
+  .catalog-item__content h3 {
+    line-height: 1.2;
+  }
+  .pagination {
+    margin-bottom: 20px;
+  }
+  .sidebar {
+    width: 260px;
   }
   .sidebar__banner {
     display: none;
   }
   .content {
-    width: auto;
-    float: none;
+    width: 450px;
   }
   .sidebar-nav {
     margin-bottom: 35px;
-  }
-  
-  .catalog-item {
-    margin: 0 auto !important;
   }
   
   .article-content__head {
@@ -215,7 +234,30 @@
     padding-bottom: 25px;
     line-height: 1.3;
   }
-  
+  .info-deliver__caption:before {
+    display: none;
+  }
+  .info-deliver__caption {
+    padding-left: 24px;
+  }
+  .product-info img {
+    float: none;
+  }
+  .product-info-header a {
+    position: static;
+  }
+  .product-info {
+    text-align: center;
+  }
+  .product-info-content {
+    margin-left: 0;
+  }
+  .product-info-header p {
+    margin-bottom: 15px;
+  }
+  .product-table {
+    margin: 0 auto;
+  }
 }
 
 @media only screen and (max-width: 767px) {
@@ -366,22 +408,17 @@
     padding-top: 10px;
     padding-bottom: 15px;
   }
-  .product-table {
+  /*.product-table {
+    margin: 0 auto;
+  }*/
+  .sidebar {
+    float: none;
     margin: 0 auto;
   }
-  
-  .catalog-item {
-    text-align: center;
-  }
-  .catalog-item tr td {
-    display: block;
-  }
-  .catalog-item__head {
-    padding-top: 20px;
-  }
-  .catalog-item-price {
+  .content {
+    float: none;
+    margin: 0 auto;
     width: auto;
-    padding-top: 20px;
   }
   .pagination {
     margin-bottom: 40px;
