--- a/scss/style.scss
+++ b/scss/style.scss
@@ -143,7 +143,7 @@ a img {
       font-size: 20px;
       font-weight: 700;
       text-transform: uppercase;
-      margin-bottom: 16px;
+      margin-bottom: 10px;
       line-height: 1.2;
     }
     &__text {
@@ -196,7 +196,7 @@ a img {
     top: 100%;
     left: 0;
     width: 440px;
-    padding: 10px 20px 22px 35px;
+    padding: 10px 20px 5px 35px;
     background: #ffde2f;
     opacity: 0;
     visibility: hidden;
@@ -892,6 +892,7 @@ a.active span:after {
 .sidebar {
   float: left;
   width: 290px;
+  padding-bottom: 50px;
   &-nav {
     margin-bottom: 77px;
     &-item {
@@ -1053,6 +1054,7 @@ a.active span:after {
       text-transform: uppercase;
       padding-bottom: 28px;
       line-height: 1.3;
+      color: #000;
     }
     &__text {
       line-height: 1.6;
